--- a/promethues/install-promethues-with-ansible/3-playbook-update-config-file.yaml
+++ b/promethues/install-promethues-with-ansible/3-playbook-update-config-file.yaml
@@ -12,6 +12,9 @@
                 scrape_interval: 15s
 
               scrape_configs:
+                - job_name: 'prom-srv'
+                  static_configs:
+                    - targets: ["192.168.56.220:9090"]
                 - job_name: 'promtheus-exporters'
                   static_configs:
                     - targets: ['192.168.56.220:9100', '192.168.56.221:9100']  
